--- a/src/upload-image/index.css
+++ b/src/upload-image/index.css
@@ -1,16 +1,20 @@
 .zhenai__upload-btn {
   cursor: pointer;
   border-radius: 4px;
-  margin-top: 20px;
+  margin-top: 12px;
   font-size: 14px;
   padding: 0 16px;
   height: 34px;
   line-height: 32px;
   text-align: center;
   color: #fff;
-  background: #e13fc0;
+  background: #126bff;
 }
 
+.zhenai__upload-btn--disable {
+  background: #126bffa8;
+  pointer-events: none;
+}
 
 .zhenai__toast {
   position: fixed;
@@ -25,6 +29,7 @@
   border-radius: 4px;
   opacity: 0;
   transition: 1s opacity;
+  z-index: 9999;
 }
 
 .zhenai-animate__fadeout {
